--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>ESP32-Web-Console</title>
+    <title>ESP32-Air-Monitor</title>
 
     <!-- Custom fonts for this template-->
     <link href="../src/font.css" rel="stylesheet">
