--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
         <li class="nav-item">
             <a class="nav-link collapsed" href="#" id="table">
                 <i class="iconfont icon-table"></i>
-                <span>表格</span>
+                <span>图表</span>
             </a>
         </li>
         <!-- Nav Item - setting -->
